--- a/Phase 1 - Stronghold/src/main/resources/FXML/Loginmenu.fxml
+++ b/Phase 1 - Stronghold/src/main/resources/FXML/Loginmenu.fxml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.LoginMenu"
-            prefHeight="800.0" prefWidth="1600.0">
-
+<Pane prefHeight="800.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LoginMenu">
+    <TextField fx:id="username" layoutX="1323.0" layoutY="255.0" promptText="username" />
+    <PasswordField fx:id="password" layoutX="1323.0" layoutY="388.0" promptText="password" />
+    <Label layoutX="1077.0" layoutY="250.0" text="Username">
+        <font>
+            <Font size="25.0" />
+        </font>
+    </Label>
+    <Label layoutX="1083.0" layoutY="382.0" text="Password">
+        <font>
+            <Font size="25.0" />
+        </font>
+    </Label>
+    <Label fx:id="error" layoutX="796.0" layoutY="666.0" textFill="RED">
+        <font>
+            <Font size="15.0" />
+        </font>
+    </Label>
+    <CheckBox fx:id="visibility" layoutX="913.0" layoutY="390.0" mnemonicParsing="false" text="visibility">
+        <font>
+            <Font size="15.0" />
+        </font>
+    </CheckBox>
+    <Button layoutX="1412.0" layoutY="800.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="55.0" text="Login" />
+    <Label layoutX="675.0" layoutY="49.0" text="Login Manu">
+        <font>
+            <Font name="System Bold" size="40.0" />
+        </font>
+    </Label>
+   <Button layoutX="1340.0" layoutY="446.0" mnemonicParsing="false" text="recovery password" />
+   <Button layoutX="1323.0" layoutY="800.0" mnemonicParsing="false" onMouseClicked="#signup" text="signup!" />
 </Pane>
