--- a/Phase 1 - Stronghold/src/main/resources/FXML/ProfileMenu.fxml
+++ b/Phase 1 - Stronghold/src/main/resources/FXML/ProfileMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
@@ -8,49 +9,62 @@
 
 <Pane prefHeight="800.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ProfileMenu">
    <children>
-      <Label layoutX="885.0" layoutY="143.0" text="username :">
+      <Label layoutX="892.0" layoutY="144.0" text="username :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <TextField layoutX="1096.0" layoutY="146.0" promptText="change username" />
+      <TextField fx:id="username" layoutX="1096.0" layoutY="146.0" promptText="change username" />
       <Button layoutX="1283.0" layoutY="533.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
-      <Button layoutX="1391.0" layoutY="440.0" mnemonicParsing="false" text="show current" />
-      <Button layoutX="1391.0" layoutY="240.0" mnemonicParsing="false" text="show current" />
-      <Button layoutX="1391.0" layoutY="346.0" mnemonicParsing="false" text="show current" />
-      <Button layoutX="1391.0" layoutY="146.0" mnemonicParsing="false" text="show current" />
       <Button layoutX="1283.0" layoutY="240.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
       <Button layoutX="1283.0" layoutY="346.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
       <Button layoutX="1283.0" layoutY="440.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
       <Button layoutX="1283.0" layoutY="146.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
-      <TextField layoutX="1096.0" layoutY="240.0" promptText="change nickname" />
-      <TextField layoutX="1096.0" layoutY="334.0" promptText="change email" />
-      <TextField layoutX="1096.0" layoutY="440.0" promptText="change slogan" />
+      <TextField fx:id="nickname" layoutX="1096.0" layoutY="240.0" promptText="change nickname" />
+      <TextField fx:id="email" layoutX="1096.0" layoutY="334.0" promptText="change email" />
+      <TextField fx:id="slogan" layoutX="1096.0" layoutY="440.0" promptText="change slogan" />
       <Button layoutX="1283.0" layoutY="628.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="85.0" text="change" />
-      <Label layoutX="885.0" layoutY="237.0" text="nickname :">
+      <Label layoutX="893.0" layoutY="238.0" text="nickname :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="903.0" layoutY="331.0" text="email :">
+      <Label layoutX="911.0" layoutY="331.0" text="email :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="899.0" layoutY="438.0" text="slogan :">
+      <Label layoutX="905.0" layoutY="439.0" text="slogan :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="1123.0" layoutY="531.0" text="password :">
+      <Label layoutX="1096.0" layoutY="531.0" text="password :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="1138.0" layoutY="626.0" text="avatar :">
+      <Label layoutX="1111.0" layoutY="626.0" text="avatar :">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
+      <Label fx:id="error" layoutX="502.0" layoutY="744.0" textFill="RED">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <CheckBox fx:id="removeSlogan" layoutX="720.0" layoutY="444.0" mnemonicParsing="false" text="remove slogan">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </CheckBox>
+      <Label layoutX="598.0" layoutY="27.0" text="Profile Menu">
+         <font>
+            <Font name="System Bold" size="40.0" />
+         </font>
+      </Label>
+      <Button fx:id="back" layoutX="1446.0" layoutY="799.0" mnemonicParsing="false" onMouseClicked="#back" prefHeight="25.0" prefWidth="57.0" text="back" />
+      <Button fx:id="scoreboard" layoutX="1207.0" layoutY="698.0" mnemonicParsing="false" onMouseClicked="#scoreboard" text="scoreboard" />
    </children>
 </Pane>
